# pieces-copilot-python-sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: basic_asset.md  basic_chat.md  basic_message.md  caching.md  copilot.md  pieces_client.md  websockets.md
pieces_copilot_sdk/: assets.py  client.py  context.py  copilot.py
pieces_copilot_sdk/basic_identifier/: __init__.py  asset.py  assets.py  basic.py  chat.py  message.py
pieces_copilot_sdk/streamed_identifiers/: __init__.py  _streamed_identifiers.py  assets_snapshot.py  conversations_snapshot.py
pieces_copilot_sdk/websockets/: __init__.py  ask_ws.py  assets_identifiers_ws.py  auth_ws.py  base_websocket.py  conversations_ws.py  health_ws.py
tests/: BasicAsset-Testing  README.md  test_basic_asset.py  test_basic_chat.py  test_basic_copilot.py  test_basic_message.py
